# escaneos

./: .env.example  .gitignore  INSTALACION_WINDOWS.md  README.md  pyproject.toml
scripts/: ocr_text.swift
src/scan_indexer/: __init__.py  cli.py  pipeline.py  review_app.py
